<resources>
    <string name="app_name">Bookworm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_explore">Explore</string>
    <string name="menu_library">Library</string>

    <string name="filter_genre">Select Genre</string>
    <string name="filter_rating">Select Rating</string>
    <string-array name="filter_rating_units">
        <item>0.0 \- 0.0</item>
        <item>1.0 \- 2.0</item>
        <item>2.0 \- 3.0</item>
        <item>3.0 \- 4.0</item>
        <item>4.0 \- 5.0</item>
    </string-array>
    <string name="filter_price">Select Price</string>
    <string-array name="filter_price_units">
        <item>Free</item>
        <item>$0 - $10</item>
        <item>$10 - $20</item>
        <item>$20 - $30</item>
        <item>$30 - $40</item>
        <item>$40 - $50</item>
        <item>$50+</item>
    </string-array>

    <string name="accounts_email_address">email.address@example.com</string>
    <string name="auth_error">Failed to authenticate. Try again in 5 seconds.</string>

    <string-array name="settings_length_units">
        <item>words</item>
        <item>pages</item>
        <item>chapters</item>
    </string-array>

    <string-array name="search_filter_inclusivity">
        <item>All</item>
        <item>Any</item>
        <item>None</item>
    </string-array>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_author_title_or_isbn">Search by author, title, or ISBN</string>
</resources>